# ai-enterprise-intelligence

./: .env.example  .gitignore  Makefile  README.dev.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  settings.py
backend/app/ai_assistant/: __init__.py  router.py  schemas.py  service.py
backend/app/assistants/: ambiguity_detector.py  cache.py  clarification_service.py  date_range_service.py  db_models.py  dlq.py  idempotency.py  intent_mapper.py  intent_registry.py  presets.py  query_cache.py  query_normalization.py  retry.py  router.py  schemas.py  semantic_policy.py  service.py  trace_recorder.py  trace_repository.py
backend/app/db/: base.py  (+1 more)
backend/scripts/: demo_backtest.py  import_kaggle_data.py  ingest_preset_qa.py  migrate_chroma_to_qdrant.py  rag_quality_test.py  rag_reset_and_ingest.py  rag_reset_and_ingest_direct.py  rag_test_results.json  seed_demo_data.py  translate_preset_qa.py  warm_preset_cache.py
backend/tests/: conftest.py  test_assistants_cache.py  test_assistants_clarification_service.py  test_assistants_date_range_service.py  test_assistants_dlq.py  test_assistants_facts_mapper.py  test_assistants_facts_service.py  test_assistants_idempotency.py  test_assistants_intent_mapper.py  test_assistants_query_cache.py  test_assistants_retry.py  test_assistants_semantic_policy.py  test_assistants_service.py  test_assistants_trace_recorder.py  test_backtest.py  test_features.py  test_forecast_api.py  test_qdrant_support.py  test_rag.py  test_settings.py
(+102 files in other folders)
