[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-forecast-api"
version = "0.1.0"
description = "Retail forecasting and AI decision support platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "lightgbm>=4.2.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "langgraph>=0.0.40",
    "openai>=1.10.0",
    "httpx>=0.26.0",
    "chromadb>=0.4.22",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.2",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
]
